--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -4467,7 +4467,7 @@ fieldset:disabled .btn {
    text-align: left;
    font-size: 14px;
 }
-.form-c-dropdown{
+select.warning{
   background-color: #F0F0F0; 
   border-style: none; 
   color:#9D9D9D; 
@@ -4478,7 +4478,7 @@ fieldset:disabled .btn {
    padding-right: 20px;
    margin-bottom: -35px;
    margin-right:20px;
-   margin-right:20px;
+   margin-left:20px;
    text-align: left;
    font-size: 14px;
    margin-top: 20px;
