--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -4,7 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
- :root {
+:root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -6273,13 +6273,13 @@ button.close {
   border-top: 1px solid #e9ecef;
 }
 
-.modal-footer .btn-secondary{
-width: 90px; 
-height: 35px; 
-background-color: #005555;
-color: white;
-border:none; 
-border-radius: 30px;
+.modal-footer .btn-secondary {
+  width: 90px;
+  height: 35px;
+  background-color: #005555;
+  color: white;
+  border: none;
+  border-radius: 30px;
 
 }
 
@@ -10494,11 +10494,15 @@ a:hover {
   text-decoration: none;
   color: #8d703b;
 }
+
 nav[aria-label="breadcrumb"] a {
-  color: #fff; }
+  color: #fff;
+}
 
 nav[aria-label="breadcrumb"] li:before {
-  color: rgba(255, 255, 255, 0.3) !important; }
+  color: rgba(255, 255, 255, 0.3) !important;
+}
+
 /*h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   line-height: 1.5;
@@ -12417,38 +12421,42 @@ textarea.form-control {
   transform: translate(-50%, -50%);
 }
 
-.block-16 .day{
-  background-color: #005555; 
-  width: 110px; 
-  height: 35px; 
-  border-radius: 3px; 
+.block-16 .day {
+  background-color: #005555;
+  width: 110px;
+  height: 35px;
+  border-radius: 3px;
   float: left;
 }
-.block-16 .day p{
-  color: white; 
-  text-align: center; 
-  line-height: 35px; 
-  font-weight:bold;
+
+.block-16 .day p {
+  color: white;
+  text-align: center;
+  line-height: 35px;
+  font-weight: bold;
 }
-.block-16 .spot{
-display: flex;
-justify-content: space-between;
-align-items: center;
-background-color: rgba(0, 85, 85, 0.07); 
-width: 705px; 
-height: 35px; 
-border-radius: 3px; 
-float: left; 
-padding: 15px;
+
+.block-16 .spot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0, 85, 85, 0.07);
+  width: 705px;
+  height: 35px;
+  border-radius: 3px;
+  float: left;
+  padding: 15px;
 }
-.block-16 .spot p{
-color: black; 
-text-align: left; 
-line-height: 8px; 
-font-weight:bold;
-margin-bottom: 0px;
+
+.block-16 .spot p {
+  color: black;
+  text-align: left;
+  line-height: 8px;
+  font-weight: bold;
+  margin-bottom: 0px;
 }
-.block-16 .spot i{
+
+.block-16 .spot i {
   display: flex;
   justify-content: flex-end;
 }
@@ -13147,10 +13155,12 @@ margin-bottom: 0px;
 }
 
 nav[aria-label="breadcrumb"] a {
-  color: #fff !important; }
+  color: #fff !important;
+}
 
 nav[aria-label="breadcrumb"] li:before {
-  color: rgba(255, 255, 255, 0.3) !important; }
+  color: rgba(255, 255, 255, 0.3) !important;
+}
 
 .hero {
   position: relative;
@@ -13489,25 +13499,28 @@ nav[aria-label="breadcrumb"] li:before {
   margin-bottom: 32px;
 }
 
-.box-side h6{
+.box-side h6 {
   font-size: 14px;
   margin-bottom: 0px;
 }
-.box-side i{
+
+.box-side i {
   margin-right: 5px;
 }
-.box-side p{
-font-size: smaller;
-margin-top: 0px;
-margin-bottom: 0px;
+
+.box-side p {
+  font-size: smaller;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
-.box-side .btn-side{
+
+.box-side .btn-side {
   display: block;
-  width: 100%; 
-  height: 36px; 
+  width: 100%;
+  height: 36px;
   background-color: #525f58;
-  color: white; 
-  border:none; 
+  color: white;
+  border: none;
   border-radius: 5px;
 }
 
@@ -13530,12 +13543,13 @@ margin-bottom: 0px;
   background-color: white;
   margin: 10% auto;
 }
-.modalContent .btn-secondary{
-  width: 100px; 
-  height: 35px; 
+
+.modalContent .btn-secondary {
+  width: 100px;
+  height: 35px;
   background-color: #005555;
   color: white;
-  border:none; 
+  border: none;
   border-radius: 30px;
 }
 
@@ -13549,75 +13563,78 @@ margin-bottom: 0px;
   margin-right: 16px;
 }
 
-.camp-icon label{
-display: block;
-margin-bottom: 0px;
-align-items: center;
-box-sizing: content-box;
-width: 64px;
+.camp-icon label {
+  display: block;
+  margin-bottom: 0px;
+  align-items: center;
+  box-sizing: content-box;
+  width: 64px;
 }
 
-.camp-icon p{
-margin-bottom: 0px;
-align-items: center;
+.camp-icon p {
+  margin-bottom: 0px;
+  align-items: center;
 }
 
-.more{
-display: flex; 
-justify-content: flex-end; 
-margin-top: 20px; 
-margin-bottom: 32px;
-font-size:14px;
+.more {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  margin-bottom: 32px;
+  font-size: 14px;
 
 }
 
-.notice{
+.notice {
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 24px;
   padding-bottom: 24px;
-  background-color: #F0F0F0; 
+  background-color: #F0F0F0;
   clear: both;
 }
-.notice .list li{
+
+.notice .list li {
   font-size: 12px;
 }
 
-.modal-list{
-display: flex;
-flex-wrap: wrap;
-align-items: center;
-margin-top: 32px;
+.modal-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 32px;
 }
 
-.modal-list input{
-  background-color: #F0F0F0; 
-  border-style: none; 
-  color:	#9D9D9D; 
-  width: 420px; 
-  height: 45px; 
+.modal-list input {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 420px;
+  height: 45px;
   border-radius: 35px;
   padding: 20px;
   margin-bottom: 20px;
   font-weight: 300;
   font-size: 12px;
-  }
+}
+
 .modal-list input[type="checkbox"] {
-  background-color: #ffffff; 
-  border-style: solid 1px; 
-  border-color: #a0a0a0; 
-  width: 12px; 
-  height: 12px; 
+  background-color: #ffffff;
+  border-style: solid 1px;
+  border-color: #a0a0a0;
+  width: 12px;
+  height: 12px;
   border-radius: 2px;
   margin-bottom: 0px;
   margin-right: 8px;
 }
-.modal-list input[type="file"]{
-  background-color: #F0F0F0; 
-  border-style: none; 
-  color:	#9D9D9D; 
-  width: 100%; 
-  height: 150px; 
+
+.modal-list input[type="file"] {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 100%;
+  height: 150px;
   border-radius: 4px;
   padding: 20px;
   margin-bottom: 0px;
@@ -13626,60 +13643,70 @@ margin-top: 32px;
   font-size: 12px;
 
 }
-.modal-list select{
-  background-color:#F0F0F0 ; 
-  border-radius: 10px;
-  border-style: none; 
-  width: 40px; 
-  color: #9D9D9D; 
-  text-align: center;
+
+.modal-list select {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 100%;
+  height: 45px;
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
 }
-.supply{
-display: flex;
-flex-wrap: wrap;
-align-items: center;
-margin-top: 16px;
-margin-bottom: 24px;
+
+.supply {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 24px;
 }
-.supply p{
+
+.supply p {
   box-sizing: content-box;
   margin-bottom: 0px;
-  width:60px;
+  width: 60px;
 }
 
-.modal-list textarea{
-  background-color: #F0F0F0; 
-  border-style: none; 
-  color: #9D9D9D; 
-  width: 420px; 
+.modal-list textarea {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 420px;
   border-radius: 8px;
   padding: 15px;
   font-weight: 300;
   font-size: 12px;
   margin-bottom: 20px;
-  }
+}
 
-.modal-list textarea.lg{
-  background-color: #F0F0F0; 
-  border-style: none; 
-  color: #9D9D9D; 
-  width: 733px; 
+.modal-list textarea.lg {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 733px;
   border-radius: 8px;
   padding: 15px;
   font-weight: 300;
   font-size: 12px;
   margin-bottom: 20px;
-  }
-.col-md-4{
+}
+
+.col-md-4 {
   display: flex;
   align-items: center;
   margin-bottom: 12px;
 }
-.btn-icon{
+
+.btn-icon {
   background-color: transparent;
   border: none;
   outline: none;
 }
+
 .file-upload {
   display: block;
   text-align: center;
@@ -13692,7 +13719,7 @@ margin-bottom: 24px;
   cursor: pointer;
   margin: 20px auto;
   max-width: 500px;
-  
+
 }
 
 
@@ -13706,12 +13733,13 @@ margin-bottom: 24px;
   max-height: 200px;
   margin-top: 10px;
 }
-.col-md-6 input{
-  background-color: #F0F0F0; 
-  border-style: none; 
-  color:	#9D9D9D; 
-  width: 100%; 
-  height: 45px; 
+
+.col-md-6 input {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 100%;
+  height: 45px;
   border-radius: 35px;
   padding: 20px;
   margin-bottom: 20px;
