--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -4372,6 +4372,27 @@ fieldset:disabled .btn {
   -o-transition: .3s all ease;
   transition: .3s all ease; }
 
+  .btn-new1{
+    text-decoration: none !important;
+    border-radius: 25px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-width: 2px;
+    border-color: transparent;
+    border: none !important;
+    font-size: 13px;
+    background-color: #a9a9a9;
+    color: #fff;
+    
+    margin-top: 8px;
+    margin-bottom: 15px;
+    margin-right: 2px;
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease; }
+  
 
 .fade {
   -webkit-transition: opacity 0.15s linear;
@@ -9725,7 +9746,7 @@ select.warning{
 .text-black-50,
 body {
   --bs-text-opacity: 1;
-  color: rgba(0, 0, 0, 0.5) !important;
+  color: #000!important;
 }
 
 .text-white-50 {
@@ -16321,4 +16342,16 @@ border-radius: 30px;
   border-radius: 30px;
   padding: 5px;
   margin-left: 15px;
+}
+
+.preview {
+  background:#888888;
+  width:550px;
+  height:auto;
+  text-align:center;
+}
+.preview img{
+  height:320px;
+  order:1;
+  vertical-align : middle;
 }
