--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -105,13 +105,26 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   line-height: 1.2; }
 
 .card-body h4{
-  margin-top: 0;
+  margin-top: 20px;
   margin-bottom: 1.3rem;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.2;
-  text-decoration: underline;
   color: #005555;
+  font-size: 20px;
+  position: relative;
+  padding-bottom: 4px;
+  display: inline-block;
 }
+.card-body h4::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  left: 0;
+  bottom: 0;
+  background-color: #005555;
+}
+
 h1, .h1 {
   font-size: calc(1.375rem + 1.5vw); }
   @media (min-width: 1200px) {
@@ -1818,7 +1831,7 @@ progress {
 
 .form-control {
   display: block;
-  width: 80%;
+  width: 100%;
   height:42px;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -2353,7 +2366,7 @@ textarea.form-control-lg {
   border-bottom-right-radius: 0; }
 
 .input-group > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
-  margin-left: -1px;
+  margin-left: 10px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0; }
 
@@ -3005,9 +3018,9 @@ textarea.form-control-lg {
   background-color: #EFE9DA;
   color: #000;
   
-  margin-top: 8px;
-  margin-bottom: 15px;
-  margin-right: 2px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  margin-right: 4px;
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease; }
@@ -4073,7 +4086,7 @@ textarea.form-control-lg {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 1rem 1rem;
+  padding: 1rem 2rem;
 }
 .card-member {
   border: none;
@@ -9751,10 +9764,11 @@ a {
   text-decoration: none; }
 
 .form-control {
-  font-size: 16px;
+  font-size: 14px;
   height: 30px;
   padding-left: 15px;
-  padding-right: 15px; }
+  padding-right: 15px;
+  margin-right: 40px; }
   .form-control:hover, .form-control:active, .form-control:focus {
     outline: none;
     -webkit-box-shadow: none;
@@ -11104,6 +11118,13 @@ nav[aria-label="breadcrumb"] li:before {
     font-size: 16px;
     align-items: center;
 
+  }
+  .card-detail h5 {
+    color: #000;
+    align-items: center;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 20px;
   }
   .article-list .details h1 a {
     color: #000;
