--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -13618,6 +13618,51 @@ nav[aria-label="breadcrumb"] li:before {
   font-size: 12px;
 }
 
+.col-md-6 {
+  overflow: hidden;
+}
+
+#preview-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-right: 16px;
+  border-radius: 4px;
+  object-fit: cover;
+}
+
+#remove-image {
+  position: absolute;
+  top: 0;
+  right: 16px;
+  /* 與圖片的padding-right相同 */
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  /* border-top-right-radius: 4px; */
+  /* 與圖片的border-radius相同 */
+  cursor: pointer;
+}
+
+.remove-image-button {
+  position: absolute;
+  top: 0;
+  right: 16px;
+  /* 與圖片的padding-right相同 */
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  /* border-top-right-radius: 4px; */
+  /* 與圖片的border-radius相同 */
+  cursor: pointer;
+}
+
 .modal-list input[type="checkbox"] {
   background-color: #ffffff;
   border-style: solid 1px;
