--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -270,7 +270,8 @@ kbd {
     font-weight: 700; }
 
 figure {
-  margin: 0 0 1rem; }
+  margin: 0 0 1rem; 
+ }
 
 img,
 svg {
@@ -524,7 +525,8 @@ progress {
   height: auto; }
 
 .figure {
-  display: inline-block; }
+  display: inline-block;
+ }
 
 .figure-img {
   margin-bottom: 0.5rem;
