--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -4253,16 +4253,19 @@ margin-bottom: 0px;
 
 .card-icon-footer {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
+  
 }
 
 .card-icon-footer p {
 margin-left: 6px;
 margin-right: 10px;
+margin-top: 0px;
 }
 .card-icon-footer i {
   margin-right: 4px;
-  margin-left: 160px;
 }
 .accordion-button {
   position: relative;
@@ -9937,9 +9940,9 @@ textarea {
   border-color: transparent;
   border: none !important;
   
-  position: absolute;
+  /*position: absolute;
   bottom: 0;
-  right: 0;
+  right: 0;*/
   margin-bottom: 20px;
   margin-right: 20px;
   -webkit-transition: .3s all ease;
@@ -10347,7 +10350,7 @@ textarea {
     margin: 0 0 10px 0;
     display: block;
     padding: 0;
-    line-height: 0; }
+    /*line-height: 0;*/ }
 
 .custom-pagination a {
   display: inline-block;
@@ -10880,10 +10883,10 @@ nav[aria-label="breadcrumb"] li:before {
     font-size: 20px;
     text-transform: uppercase; }
 
-  i.fa-solid{
+  /*i.fa-solid{
     width: 18px;
     height: auto;
-  }
+  }*/
   
   .button-search{
     border-radius: 35px; 
@@ -11239,7 +11242,7 @@ nav[aria-label="breadcrumb"] li:before {
   text-transform: uppercase;
   display: inline-block;
   padding: 6px 16px;
-  margin-bottom: 7px;
+  margin-bottom: 4px;
   margin-right: 4px;
   border-radius: 25px;
   color: #000000;
