--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -9542,17 +9542,239 @@ margin-bottom: 0px;
     border: 1px solid #000; }
 
     
-  article .detail {
+    .article-list {
+      margin-bottom: 50px;
+      position: relative;
+    }
+    .article-list:last-child {
+      margin-bottom: 0;
+    }
+    .article-list .badge {
+      position: absolute;
+      top: 0;
+      right: 15px;
+      border-radius: 0;
+      background-color: #F73F52;
+    }
+    .article-list .inner {
+      display: inline-block;
+      width: 100%;
+    }
+    .article-list figure {
+      width: 300px;
+      height: 195px;
+      overflow: hidden;
+      background-color: #000;
+      float: left;
+      display: inline-block;
+      margin-bottom: 0;
+    }
+    .article-list figure img {
+      width: 100%;
+    }
+    .article-list .details {
+      padding: 5px;
+      margin-left: 315px;
+    }
+    .article-list .details .detail .category, .article-list .details .detail .time {
+      margin: 0 10px;
+    }
+    .article-list .details .detail .category {
+      margin: 0;
+    }
+    .article-list .details h1 {
+      margin: 0;
+      margin-top: 5px;
+      margin-bottom: 10px;
+      font-size: 20px;
+      line-height: 28px;
+    }
+    .details footer{
+      display: flex;
+      align-items: center;
+    }
+    .details footer p{
+      margin-right: 16px;
+    }
+    .details footer i{
+      margin-right: 4px;
+      margin-left: 332px;
+    }
+    .detail h4 {
+      color: #157347;
+      margin-right: 12px;
+    }
+    .detail h5 {
+      color: #005555;
+      margin-left: 180px;
+      align-items: center;
+      text-decoration: underline;
+      margin-bottom: 0px;
+      font-weight: 600;
+    }
+  
+    .detail i{
+      font-size: 16px;
+      align-items: center;
+    }
+    .detail-icon{
+      color: black; 
+      display: inline; 
+      font-weight: 400; 
+      font-size: 16px;
+      align-items: center;
+  
+    }
+    .article-list .details h1 a {
+      color: #000;
+      text-decoration: none;
+      transition: all .5s;
+      -moz-transition: all .5s;
+      -webkit-transition: all .5s;
+      -o-transition: all .5s;
+    }
+    .article-list .details h1 a:hover {
+      color: #005555;
+    }
+    .article-list .details p {
+      line-height: 26px;
+    }
+    .article-list footer {
+      margin-top: 0;
+    }
+    @media screen and (max-width: 425px) {
+      .article-list figure {
+        width: 100%;
+        height: 200px;
+        margin-bottom: 10px;
+      }
+      .article-list .details {
+        margin-left: 0;
+      }
+      .article-list .details .detail {
+        display: inline-flex;
+        display: -webkit-inline-box;
+      }
+    }
+    
+    article .detail {
       display: flex;
       margin-bottom: 24px;
       font-size: 12px;
       align-items: center;
-  }
-  .detail h1 {
-    margin: 0;
-    font-size: 20px;
-    line-height: 28px;
-}
+    }
+    .detail h1 {
+      margin: 0;
+      font-size: 20px;
+      line-height: 28px;
+    }
+    
+    .detail h1 a {
+      color: #000;
+      text-decoration: none;
+      transition: all .5s;
+      -moz-transition: all .5s;
+      -webkit-transition: all .5s;
+      -o-transition: all .5s;
+    }
+    .detail h1 a:hover {
+      color: #005555;
+    }
+    aside {
+      margin-bottom: 40px;
+      display: inline-block;
+      width: 100%;
+    }
+    aside:last-child {
+      margin-bottom: 0;
+    }
+    aside .aside-title {
+      font-size: 16px;
+      position: relative;
+      font-weight: 800;
+      margin: 0;
+      text-transform: uppercase;
+      margin-bottom: 30px;
+    }
+    aside .aside-title .all {
+      position: absolute;
+      right: 0;
+      font-size: 12px;
+      font-weight: 700;
+      color: #383838;
+      top: 5px;
+    }
+    aside .aside-title .all i {
+      color: #F73F52;
+      margin-left: 5px;
+    }
+    aside .aside-title:after {
+      content: ' ';
+      position: absolute;
+      bottom: -10px;
+      left: 0;
+      width: 15px;
+      height: 2px;
+      background-color: #F73F52;
+    }
+    aside .article-mini {
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+    }
+    aside .article-mini figure {
+      margin-bottom: 0;
+    }
+    aside .article-mini h1 {
+      margin-top: -3px;
+    }
+    aside .nav li a {
+      background-color: #F0F0F0;
+      color: #333;
+      padding: 12px;
+      font-size: 14px;
+      border-radius: 0 !important;
+    }
+    aside .nav li a i:before {
+      font-size: 18px;
+      margin-right: 5px;
+    }
+    aside .nav li.active a {
+      background-color: #fff;
+      color: #000;
+      border-top: 2px solid #F73F52 !important;
+    }
+    aside .nav li.active a i {
+      color: #F73F52;
+    }
+    aside .tab-pane {
+      border: 1px solid #ddd;
+      border-top: none;
+      padding: 20px;
+    }
+    aside .line {
+      margin: 40px 0;
+    }
+    aside .sponsored {
+      padding: 0;
+      margin: 0 -5px;
+    }
+    aside .sponsored li {
+      float: left;
+      display: inline-block;
+      width: 50%;
+      padding: 5px;
+    }
+    aside .sponsored li a img {
+      width: 100%;
+    }
+    aside .ads img {
+      width: 100%;
+    }
+    aside .ads figcaption {
+      font-size: 12px;
+      margin-top: 3px;
+      color: #989898;
+    }
   .detail h5 {
     color: #005555;
     align-items: center;
