--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -8126,7 +8126,7 @@ nav[aria-label="breadcrumb"] li:before {
   background: #fff !important;
   color: #000000 !important;
   font-size: 14px;
-  border-radius: 35px;
+  border-radius: 35px !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
   margin-right: 10px; }
@@ -8170,7 +8170,7 @@ textarea.form-control {
   font-size: 24px; }
 
 .ftco-section {
-  padding: 6em 0;
+  padding-top: 6em;
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
@@ -8178,7 +8178,6 @@ textarea.form-control {
   @media (min-width: 768px) {
     .ftco-section .container-fluid {
       padding: 0 4em; } }
-
 .ftco-bg-dark {
   background: #3c312e; }
 
@@ -8469,7 +8468,6 @@ textarea.form-control {
   position: relative;
   width: 100%;
   display: block;
-  height: 1500px
 ; }
   .ftco-section .nav-pills p {
     margin-bottom: 0; }
@@ -9432,7 +9430,7 @@ textarea.form-control {
     max-width: 1320px; } }
 
   .button-search{
-    border-radius: 35px; 
+    border-radius: 35px; }
 
 .box {
   display: flex;
@@ -9582,3 +9580,4 @@ dialog::backdrop {
   margin-left: 10px;
 
 }
+
