--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -1561,7 +1561,7 @@ pre {
 
 .form-control {
   display: block;
-  width: 100%;
+  width: 200px;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
