--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -4362,7 +4362,7 @@ fieldset:disabled .btn {
   border-color: transparent;
   border: none !important;
   font-size: 13px;
-  background-color: #62765d;
+  background-color: #005555;
   color: #fff;
   
   margin-top: 8px;
