--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -3637,12 +3637,13 @@ input[type="button"].btn-block {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  min-width: 0;
+  min-width: 0px;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem; }
+  border-radius: 0.25rem;
+   }
   .card > hr {
     margin-right: 0;
     margin-left: 0; }
@@ -9580,4 +9581,15 @@ dialog::backdrop {
   margin-left: 10px;
 
 }
+/*.article-list {
+  flex-wrap: wrap;
+}
+
+.inner {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}*/
 
