--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -3660,6 +3660,33 @@ input[type="button"].btn-block {
   flex: 1 1 auto;
   padding: 1.25rem; }
 
+.card-body h4{
+  margin-top: 20px;
+  margin-bottom: 1.3rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #005555;
+  font-size: 20px;
+  position: relative;
+  padding-bottom: 4px;
+  display: inline-block;
+}
+.card-body h4::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  left: 0;
+  bottom: 0;
+  background-color: #005555;
+}
+  
+.card-text{
+  margin-left: 6px; 
+  font-size: 15px; 
+  margin-right: 4px;
+}
+
 .card-title {
   margin-bottom: 0.75rem; }
 
@@ -9559,14 +9586,11 @@ dialog::backdrop {
 }
 
 .card-icon-footer p {
-margin-left: 6px;
 margin-right: 10px;
-margin-top: 0px;
 margin-bottom: 0px;
 }
 .card-icon-footer i {
   margin-right: 4px;
-  margin-left: 160px;
 }
 .list i{
   margin-right: 8px;
@@ -9615,25 +9639,111 @@ margin-bottom: 0px;
   display: flex;
   flex-wrap: wrap;
 }*/
-
-    
-  article .detail {
-      display: flex;
-      margin-bottom: 24px;
-      font-size: 12px;
-      align-items: center;
-  }
-  .detail h1 {
-    margin: 0;
-    font-size: 20px;
-    line-height: 28px;
+.article-list .details {
+  padding: 5px;
+  margin-left: 315px;
 }
-  .detail h5 {
-    color: #005555;
-    align-items: center;
-    text-decoration: underline;
-    margin-bottom: 0px;
-    font-weight: 600;
+.article-list .details .detail .category, .article-list .details .detail .time {
+  margin: 0 10px;
+}
+.article-list .details .detail .category {
+  margin: 0;
+}
+.article-list .details h1 {
+  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 28px;
+}
+.details footer{
+  display: flex;
+  align-items: center;
+}
+.details footer p{
+  margin-right: 16px;
+}
+.details footer i{
+  margin-right: 4px;
+  margin-left: 332px;
+}
+.detail{
+  display: flex;
+  margin-bottom: 24px;
+  font-size: 12px;
+  align-items: center;
+}
+
+.detail h4 {
+  color: #005555;
+  margin-right: 12px;
+  margin-left: 64px;
+}
+.detail h5 {
+  color: #000;
+  align-items: center;
+  margin-bottom: 0px;
+  font-weight: 700;
+  font-size: 20px;
+  box-sizing: content-box;
+  width: 200px;
+}
+
+.detail i{
+  font-size: 16px;
+  align-items: center;
+}
+.detail-icon{
+  color: black; 
+  display: inline; 
+  font-weight: 400; 
+  font-size: 16px;
+  align-items: center;
+
+}
+.card-detail h5 {
+  color: #000;
+  align-items: center;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 20px;
+}
+.article-list .details h1 a {
+  color: #000;
+  text-decoration: none;
+  transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+}
+.article-list .details h1 a:hover {
+  color: #005555;
+}
+.article-list .details p {
+  line-height: 26px;
+}
+.article-list footer {
+  margin-top: 0;
+}
+@media screen and (max-width: 425px) {
+  .article-list figure {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 10px;
+  }
+  .article-list .details {
+    margin-left: 0;
+  }
+  .article-list .details .detail {
+    display: inline-flex;
+    display: -webkit-inline-box;
+  }
+}
+article .detail {
+  display: flex;
+  margin-bottom: 24px;
+  font-size: 12px;
+  align-items: center;
 }
 .py-5 {
   padding-top: 3rem !important;
@@ -9686,3 +9796,21 @@ margin-bottom: 0px;
       border-left: 1px solid #a0a0a0;
       height: 30px;
     }
+.span-adj{
+  display: flex; 
+  align-items: center;
+}
+.span-adj i{
+  font-size: 16px;
+  padding-left: 10px;
+  padding-right: 5px;
+}
+.btn-icon{
+  background-color: transparent;
+  border: none;
+  outline: none;
+  line-height: normal;
+}
+.btn-icon i{
+font-size: 18px;
+}
