--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -13666,7 +13666,7 @@ nav[aria-label="breadcrumb"] li:before {
 .modal-list input[type="checkbox"] {
   background-color: #ffffff;
   border-style: solid 1px;
-  border-color: #a0a0a0;
+  border-color: #7d7d7d;
   width: 12px;
   height: 12px;
   border-radius: 2px;
@@ -13677,7 +13677,7 @@ nav[aria-label="breadcrumb"] li:before {
 .modal-list input[type="file"] {
   background-color: #F0F0F0;
   border-style: none;
-  color: #9D9D9D;
+  color: #7d7d7d;
   width: 100%;
   height: 150px;
   border-radius: 4px;
@@ -13692,11 +13692,11 @@ nav[aria-label="breadcrumb"] li:before {
 .modal-list select {
   background-color: #F0F0F0;
   border-style: none;
-  color: #9D9D9D;
+  color: #7d7d7d;
   width: 100%;
   height: 45px;
   border-radius: 35px;
-  padding: 20px;
+  padding-left: 15px;
   margin-bottom: 20px;
   font-weight: 300;
   font-size: 12px;
@@ -13719,7 +13719,7 @@ nav[aria-label="breadcrumb"] li:before {
 .modal-list textarea {
   background-color: #F0F0F0;
   border-style: none;
-  color: #9D9D9D;
+  color: #7d7d7d;
   width: 420px;
   border-radius: 8px;
   padding: 15px;
@@ -13731,7 +13731,7 @@ nav[aria-label="breadcrumb"] li:before {
 .modal-list textarea.lg {
   background-color: #F0F0F0;
   border-style: none;
-  color: #9D9D9D;
+  color: #7d7d7d;
   width: 733px;
   border-radius: 8px;
   padding: 15px;
@@ -13782,7 +13782,7 @@ nav[aria-label="breadcrumb"] li:before {
 .col-md-6 input {
   background-color: #F0F0F0;
   border-style: none;
-  color: #9D9D9D;
+  color: #7d7d7d;
   width: 100%;
   height: 45px;
   border-radius: 35px;
