--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -16454,7 +16454,7 @@ dialog::backdrop {
   width: 420px;
   height: 45px;
   border-radius: 35px;
-  padding: 20px;
+  padding-left: 15px;
   margin-bottom: 20px;
   font-weight: 300;
   font-size: 12px;
