--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -11753,3 +11753,65 @@ width: 50px;
   padding-left: 10px;
   padding-right: 5px;
 }
+.btn-new{
+  text-decoration: none !important;
+  border-radius: 25px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-width: 2px;
+  border-color: transparent;
+  border: none !important;
+  font-size: 13px;
+  background-color: #005555;
+  color: #fff;
+  
+  margin-top: 8px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease; }
+
+.btn-new1{
+  text-decoration: none !important;
+  border-radius: 25px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-width: 2px;
+  border-color: transparent;
+  border: none !important;
+  font-size: 13px;
+  background-color: #a9a9a9;
+  color: #fff;
+  
+  margin-top: 8px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease; }
+
+  .btn-new2{
+    text-decoration: none !important;
+    border-radius: 25px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-width: 2px;
+    border-color: transparent;
+    border: none !important;
+    font-size: 13px;
+    background-color: #EFE9DA;
+    color: #fff;
+    
+    margin-top: 8px;
+    margin-bottom: 15px;
+    margin-right: 2px;
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease; }
