--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -11815,3 +11815,24 @@ width: 50px;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease; }
+    
+select.warning{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:#9D9D9D; 
+  width: 410px; 
+  height: 43px;
+   border-radius: 35px;
+   padding-left: 20px;
+   padding-right: 20px;
+   margin-bottom: -35px;
+   margin-right:20px;
+   margin-left:20px;
+   text-align: left;
+   font-size: 14px;
+   margin-top: 20px;
+   margin-bottom: 20px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
