--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -10081,8 +10081,7 @@ textarea {
   /*position: absolute;
   bottom: 0;
   right: 0;*/
-  margin-bottom: 20px;
-  margin-right: 20px;
+  margin:10px;
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease; }
@@ -11835,4 +11834,33 @@ select.warning{
    display: flex;
    justify-content: space-between;
    align-items: center;
+}
+.articletag{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:#9D9D9D; 
+  width: 350px; 
+  height: 40px;
+  border-radius: 30px;
+  padding: 20px;
+  margin-left: 32px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.articlrtext{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:#9D9D9D;
+  width: 1030px; 
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+.articletitle{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  width: 350px; 
+  height: 40px; 
+  border-radius: 30px;
+  padding: 20px;
 }
