--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -16252,6 +16252,22 @@ love.active {
     margin-top: -60px;
     padding-right: 60px;
   }
+
+  .btn-new{
+    text-decoration: none !important;
+    border-radius: 25px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-width: 2px;
+    border-color: transparent;
+    border: none !important;
+    font-size: 13px;
+    background-color: #005555;
+    color: #fff;
+  }
+  
   .btn-icon{
     background-color: transparent;
     border: none;
